run package step only on master, run stages only worker changes

--- a/worker/Jenkinsfile
+++ b/worker/Jenkinsfile
@@ -7,6 +7,10 @@ pipeline {
 
     stages {
         stage('build') {
+            when{
+                changeset "**/worker/**"
+            }
+
             steps {
                 echo 'Compoling worker app'
                 dir('worker'){
@@ -14,7 +18,13 @@ pipeline {
                 }
             }
         }
+
         stage('test') {
+
+            when{
+                changeset "**/worker/**"
+            }
+
             steps {
                 echo 'Running Unit Tests on worker app'
                 dir('worker'){
@@ -22,19 +32,25 @@ pipeline {
                 }
             }
         }
+
         stage('package') {
+            when{
+                branch 'master'
+                changeset "**/worker/**"
+            }
             steps {
                 echo 'Packaging worker app'
                 dir('worker'){
                     sh 'mvn package -DskipTests'
+                    archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
                 }
             }
         }
        
     }
+
     post{
         always{
-            archiveArtifacts artifacts: '**/target/*.jar', fingerprint: true
             echo 'Building multibranch pipeline for worker is completed.'
         }
     }
